# ironcompress

./: .editorconfig  .gitignore  .gitmodules  README.md
.github/workflows/: build.yml  ci.yml  full.yml  prerelease.yml  release.yml
docs/: README.md  release-history.md  release-notes.md
managed/: IronCompress.sln  IronCompress.slnx  NetBox.cs
managed/IronCompress/: Codec.cs  Compress.cs  DataBuffer.cs  Iron.cs  IronCompress.csproj  IronCompressResult.cs  Native.cs  Platform.cs  Result.cs
managed/IronCompress.Benchmarks/: IronCompress.Benchmarks.csproj  Program.cs
managed/IronCompress.Test/: IronCompress.Test.csproj  IronTest.cs  UnitTest1.cs
native/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  api.cpp  api.h  local-build.ps1  native-codecs.cpp  native-codecs.h  test.cpp  vcpkg-configuration.json  vcpkg.json
native/lib/: CMakeLists.txt  api.cpp  api.h
native/nironcompress/: CMakeLists.txt  api.cpp
native/test/: CMakeLists.txt  test.cpp
